--- a/static/sass/_animat.scss
+++ b/static/sass/_animat.scss
@@ -1,7 +1,9 @@
-//------------------
-// Animat
-//------------------
-@import "prefixer";
+// ==================================================
+// Animat 动画支持
+// ==================================================
+
+// 依赖前缀
+@import "prefixer.scss";
 
 
 @mixin transition($value){
