--- a/static/sass/_common.scss
+++ b/static/sass/_common.scss
@@ -1,9 +1,12 @@
-//======================
-// Common
-//======================
+// ==================================================
+// Common styles
+// ==================================================
+
+// 左右浮动
 .fl{ float: left;}
 .fr{ float: right;}
 
+// 清除浮动
 .clearfix{
 	@include clearfix;
 }
