--- a/static/sass/_font.scss
+++ b/static/sass/_font.scss
@@ -1,6 +1,6 @@
-//--------------------
-// style font
-//--------------------
+// ==================================================
+// Font-face Style
+// ==================================================
 
 @font-face {
     font-family: "FontAwesome";
