--- a/static/sass/_prefixer.scss
+++ b/static/sass/_prefixer.scss
@@ -1,6 +1,6 @@
-//------------------
-// prefixer css3前缀
-//------------------
+// ==================================================
+// Prefixer css3前缀
+// ==================================================
 
 // prefixer 属性前缀
 $prefixForWebkit:             true !default;
