--- a/static/sass/_css3.scss
+++ b/static/sass/_css3.scss
@@ -1,15 +1,17 @@
-//------------------
-// CSS3
-//------------------
+// ==================================================
+// Css3 模块
+// ==================================================
+
+// 依赖前缀
 @import "prefixer";
 
-//px to rem
-//@param  {[number]} $px      		 [px] 640的设计稿尺寸
+// px to rem
+// @param  {[number]} $px      		 [px] 640的设计稿尺寸
 @function toREM($px){
 	@return $px/40 + rem;
 }
 
-//css3
+// css3
 @mixin radius($radius) {
 	@include prefixer(border-radius, $radius);
 }
@@ -23,23 +25,23 @@
 }
 
 @mixin linear-gradient($from, $to) {
-    /* Fallback for sad browsers */
+    // Fallback for sad browsers
     background-color: $to;
-    /* Mozilla Firefox */
+    // Mozilla Firefox
     background-image:-moz-linear-gradient($from, $to);
-    /* Opera */
+    // Opera
     background-image:-o-linear-gradient($from, $to);
-    /* WebKit (Chrome 11+) */
+    // WebKit (Chrome 11+)
     background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, $from), color-stop(1, $to));
-    /* WebKit (Safari 5.1+, Chrome 10+) */
+    // WebKit (Safari 5.1+, Chrome 10+)
     background-image: -webkit-linear-gradient($from, $to);
-    /* IE10 */
+    // IE10
     background-image: -ms-linear-gradient($from, $to);
-    /* W3C */
+    // W3C
     background-image: linear-gradient($from, $to);
 }
 
-//弹性布局
+// 弹性布局
 @mixin flexbox{
 	display: -webkit-box;           // OLD - iOS 6-, Safari 3.1-6 //老版本语法: Safari,  iOS, Android browser, older WebKit browsers.
 	display: -moz-box;              // OLD - Firefox 19- (doesn't work very well) //老版本语法: Firefox (buggy) 
@@ -48,8 +50,8 @@
 	display: flex;                  // NEW, Spec - Opera 12.1, Firefox 20+ //新版本语法： Opera 12.1, Firefox 22+
 }
 
-//垂直居中 绝对定位版 css3
-//@param  {[string]} $direction      [both] 上下左右都设置,[horizontal] 左右居中,[vertical] 上下居中
+// 垂直居中 绝对定位版 css3
+// @param  {[string]} $direction      [both] 上下左右都设置,[horizontal] 左右居中,[vertical] 上下居中
 @mixin transCenter($direction: both) {
 	position: absolute;
 	@if $direction == both {
@@ -67,7 +69,49 @@
 	}
 }
 
-//ellipsis 测试版
+// [boxCenter 元素垂直水平居中]
+// @param  {[type]} $pack:  center        [水平方向居中，false时表示不设置]
+// @param  {[type]} $align: center        [垂直方向居中，false时表示不设置]
+@mixin boxCenter($pack: center, $align: center){
+	@include flexbox;
+	@if($pack != false){
+		// 水平居中
+		// 老版本语法
+		-webkit-box-pack: center; 
+		-moz-box-pack: center; 
+		// 混合版本语法
+		-ms-flex-pack: center; 
+		// 新版本语法
+		-webkit-justify-content: center;
+		justify-content: center;
+	}
+	@if($align != false){
+		// 垂直居中
+		// 老版本语法
+		-webkit-box-align: center; 
+		-moz-box-align: center;
+		// 混合版本语法
+		-ms-flex-align: center; 
+		// 新版本语法
+		-webkit-align-items: center;
+		align-items: center;
+	}
+}
+
+
+// 弹性布局子元素
+@mixin flexboxKids($num:1){
+	-webkit-box-flex: $num;            // OLD - iOS 6-, Safari 3.1-6
+	-moz-box-flex: $num;               // OLD - Firefox 19-
+	-webkit-flex: $num;                // Chrome
+	-ms-flex: $num;                    // IE 10
+	flex: $num;                        // NEW, Spec - Opera 12.1, Firefox 20+
+}
+
+// -------------------------------------
+// [ellipsis 测试版]
+// @param  {[type]} $line:      1             [1代表单行显示省略号]
+// -------------------------------------
 @mixin ellipsis($line: 1, $substract: 0) {
     @if $line == 1 {
         white-space: nowrap;
@@ -79,46 +123,6 @@
         width: 100% - $substract;
     }
     overflow: hidden;
-}
-
-
-//[boxCenter 元素垂直水平居中]
-//@param  {[type]} $pack:  center        [水平方向居中，false时表示不设置]
-//@param  {[type]} $align: center        [垂直方向居中，false时表示不设置]
-@mixin boxCenter($pack: center, $align: center){
-	@include flexbox;
-	@if($pack != false){
-		//水平居中
-		//老版本语法
-		-webkit-box-pack: center; 
-		-moz-box-pack: center; 
-		//混合版本语法
-		-ms-flex-pack: center; 
-		//新版本语法
-		-webkit-justify-content: center;
-		justify-content: center;
-	}
-	@if($align != false){
-		//垂直居中
-		//老版本语法
-		-webkit-box-align: center; 
-		-moz-box-align: center;
-		//混合版本语法
-		-ms-flex-align: center; 
-		//新版本语法
-		-webkit-align-items: center;
-		align-items: center;
-	}
-}
-
-
-//弹性布局子元素
-@mixin flexboxKids($num:1){
-	-webkit-box-flex: $num;            //OLD - iOS 6-, Safari 3.1-6
-	-moz-box-flex: $num;               //OLD - Firefox 19-
-	-webkit-flex: $num;                //Chrome
-	-ms-flex: $num;                    //IE 10
-	flex: $num;                        //NEW, Spec - Opera 12.1, Firefox 20+
 }
 
 // 控制文字行数溢出点点点
