--- a/static/sass/_mixin.scss
+++ b/static/sass/_mixin.scss
@@ -1,6 +1,6 @@
-//------------------
-// mixin
-//------------------
+// ==================================================
+// Mixin
+// ==================================================
 @import "prefixer";
 
 //清除浮动
@@ -100,4 +100,52 @@
 
 @function percent($self, $screen:1903){
 	@return ($self / $screen) * 100%;
+}
+
+
+// ==================================================
+// Variables
+// ==================================================
+// Supports 
+// @media min-width
+// @media max-width
+// @media min-width and max-width
+
+$viewport-increment: 0.1px; // customize to suite
+
+// Pc/Mac
+$desktop: 1024px; // customize to suite
+$pre-desktop: $desktop - $viewport-increment;
+
+// iPad
+$tablet: 768px; // customize to suite
+$pre-tablet: $tablet - $viewport-increment;
+
+// iPhone
+$palm: 640px; // customize to suite
+$post-palm: $palm + $viewport-increment;
+
+// Constraints
+$min: min-width;
+$max: max-width;
+
+
+// ==================================================
+// Media Query @Mixin
+// ==================================================
+
+@mixin mediaQuery($constraint, $viewport1, $viewport2: null) {
+	@if $constraint == $min {
+		@media screen and ($min: $viewport1) {
+			@content;
+		}
+	} @else if $constraint == $max {
+		@media screen and ($max: $viewport1) {
+			@content;
+		}
+	} @else {
+		@media screen and ($min: $viewport1) and ($max: $viewport2) {
+			@content;
+		}
+	}
 }
