--- a/static/sass/_typo.scss
+++ b/static/sass/_typo.scss
@@ -1,6 +1,6 @@
-//--------------------
-// typo.css
-//--------------------
+// ==================================================
+// Typo.css
+// ==================================================
 
 /* 保证块/段落之间的空白隔行 */
 .typo p, .typo pre, .typo ul, .typo ol, .typo dl, .typo form, .typo hr, .typo table,
@@ -9,7 +9,7 @@
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: PingFang SC, Verdana, Helvetica Neue, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
+	font-family: $font-family;
 	font-weight: 100;
 	color: #000;
 	line-height: 1.35;
