--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@ layout: default
 <div class="block-catalog">
     <div class="conter">
         <h3>文章目录</h3>
-        <ul></ul>
+        <ul class="tree"></ul>
     </div>
 </div>
 
