--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -432,21 +432,22 @@ footer {
 
 // test flex
 ul.flex{
-	@include flexbox;
+	display: flex;
+	-webkit-display: flex;
 	margin: 0;
 	list-style: none;
 	flex-flow: row wrap;
 	-webkit-flex-flow: row wrap;
 	-webkit-flex-direction: row;
 	-webkit-flex-wrap: wrap;
-	width: 260px;
 	li{
-		@include flexboxKids();
+		flex: 1;
+		-webkit-flex: 1;
 		min-width: 30%;
 		text-align: center;
 		@for $i from 1 to 6{
 			&:nth-child(#{$i}){
-				background: darken(#f00, $i * 4%);
+				background: darken(#f0f, $i * 4%);
 			}
 		}
 	}
