--- a/static/sass/_css3.scss
+++ b/static/sass/_css3.scss
@@ -51,12 +51,20 @@
 }
 
 // 弹性布局子元素
-@mixin flexboxKids($num:1){
-	-webkit-box-flex: $num;            // OLD - iOS 6-, Safari 3.1-6
-	-moz-box-flex: $num;               // OLD - Firefox 19-
-	-webkit-flex: $num;                // Chrome
-	-ms-flex: $num;                    // IE 10
-	flex: $num;                        // NEW, Spec - Opera 12.1, Firefox 20+
+@mixin flex($values:1){
+	-webkit-box-flex: $values;            // OLD - iOS 6-, Safari 3.1-6
+	-moz-box-flex: $values;               // OLD - Firefox 19-
+	-webkit-flex: $values;                // Chrome
+	-ms-flex: $values;                    // IE 10
+	flex: $values;                        // NEW, Spec - Opera 12.1, Firefox 20+
+}
+
+@mixin order($val) {
+	-webkit-box-ordinal-group: $val;  
+	-moz-box-ordinal-group: $val;     
+	-ms-flex-order: $val;     
+	-webkit-order: $val;  
+	order: $val;
 }
 
 // 垂直居中 绝对定位版 css3
