--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -416,7 +416,7 @@ li[class^="icon-"].icon-large:before, li[class*=" icon-"].icon-large:before {
 
 // 多说评论
 #comments{
-	margin: 2em 25em 0 0;
+	margin: 2em 0 0 0;
 	@include mediaQuery($max, '1023px'){
 		margin: 2em 2% 0 2%;
 	}
