--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 <![endif]-->
 <script src="/static/js/jquery.js"></script>
 </head>
-<body class="home blog lotus index">
+<body class="lotus">
     <nav>
     	<div class="logo">
     		<a href="/index.html" title="logo"><img src="/static/images/logo.jpg" alt=""></a>
