--- a/static/sass/_reset.scss
+++ b/static/sass/_reset.scss
@@ -52,11 +52,15 @@ fieldset, img {
 // 块/段落引用
 blockquote {
 	position: relative;
-	color: #999;
+	color: #3f3f3f;
 	font-weight: 400;
-	border-left: 1px solid #1abc9c;
-	padding-left: 1em;
-	margin: 1em 3em 1em 2em;
+	border-left: 10px solid rgba(128,128,128,0.075);
+	padding: 15px 20px;
+	margin: 1em 0;
+	background-color: rgba(128,128,128,0.05);
+	p{
+		margin: 0 !important;
+	}
 }
 
 @media only screen and ( max-width: 640px ) {
@@ -170,8 +174,8 @@ pre, code, pre tt {
 }
 
 pre {
-	background: #f3f3f3;
-	padding: 1em;
+	background-color: rgba(128,128,128,0.05);
+	padding: 10px 20px;
 	display: block;
 	-webkit-overflow-scrolling: touch;
 	word-wrap:break-word; 
@@ -182,7 +186,7 @@ code {
 	margin: 0 2px; 
 	padding: 1px 4px; 
 	color: #4d4d4d; 
-	background: rgba(214, 214, 214, 0.5); 
+	background-color: rgba(128,128,128,0.05); 
 	border-radius: 2px; 
 }
 
