--- a/static/sass/_reset.scss
+++ b/static/sass/_reset.scss
@@ -166,7 +166,7 @@ mark {
 
 // 代码片断
 pre, code, pre tt {
-	font-family: Consolas,Menlo,Monaco,"Courier New",monospace; 
+	font-family: "Source Code Pro Medium",Consolas,Menlo,Monaco,"Courier New",monospace; 
 	overflow-x: auto; 
 	vertical-align: middle;
 	font-size: .95em;
