--- a/demo/nav_scroll/css/css.css
+++ b/demo/nav_scroll/css/css.css
@@ -28,7 +28,7 @@
  * name : 导航样式
  * version : 2.0
  */
-.m_nav { position: relative; width: 100%; z-index: 100; min-height: 44px; background: rgba(239,75,75,0.9); }
+.m_nav { position: relative; width: 100%; z-index: 100; min-height: 44px; background: rgba(239,75,75,0.9); max-width: 640px; }
 .m_iscoll { position: absolute; left: 0; top: 0; right: 0; overflow: hidden;}
 .m_iscoll a.openbtn { display: none; position: absolute; width: 43px; height: 43px; line-height: 43px; top: 0; right: 0; z-index: 5; text-align: center; color: #9e9e9e; background: rgba(239,75,75,0.9); border-left: none; }
 .m_iscoll a.openbtn:after { -webkit-transform: rotate(180deg); -moz-transform: rotate(180deg); -ms-transform: rotate(180deg); transform: rotate(180deg); -webkit-transition: all ease 0.3s; -moz-transition: all ease 0.3s; -ms-transition: all ease 0.3s; transition: all ease 0.3s; display: block; content: ' '; width: 16px; height: 16px; margin: 14px auto; background: url(../images/arrow2.png); background-size: 16px; overflow: hidden; }
