--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
             {% for link in site.nav %}
 	            {% assign active = nil %}
 	            {% assign homeClass = nil %}
-	            {% if page.url == link.url%}
+	            {% if page.url == link.url or page.url == '' %}
 	                {% assign active = 'current' %}
 	            {% endif %}
 	            {% if link.class == 'home' %}
