--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,10 @@
 <meta name="description" content="{{ page.description }}" />
 <meta name="keywords" content="{{ page.keywords | join: ',' }}" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" media="all" href="/static/style.css?v=0229" />
-<link rel="stylesheet" type="text/css" media="all" href="/static/pygments.css">
+<link rel="stylesheet" type="text/css" media="all" href="/static/dist/style.css" />
 <!--[if lt IE 9]>
 <script src="/static/js/html5.js" type="text/javascript"></script>
 <![endif]-->
-<script src="/static/js/jquery.js"></script>
 </head>
 <body class="lotus">
     <nav>
@@ -44,7 +42,8 @@
 <footer>
 	<p>Copyright © 2010–2016 {{ site.title }} All rights reserved. Design by <a href="http://www.zhanxin.info" target="_blank">zhanxin</a>.</p>
 </footer>
-<script src="/static/js/jquery.scrollTo.js"></script>
-<script src="/static/js/iLotus.js"></script>
+
+<script src="http://cdn.bootcss.com/jquery/1.8.3/jquery.min.js"></script>
+<script src="/static/dist/main.js"></script>
 </body>
 </html>
