--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 <meta name="description" content="{{ page.description }}" />
 <meta name="keywords" content="{{ page.keywords | join: ',' }}" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" media="all" href="/static/dist/style.css" />
+<link rel="stylesheet" type="text/css" media="all" href="/static/dist/style.css?v=20170303" />
 <!--[if lt IE 9]>
 <script src="/static/js/html5.js" type="text/javascript"></script>
 <![endif]-->
@@ -44,6 +44,6 @@
 </footer>
 
 <script src="http://cdn.bootcss.com/jquery/1.8.3/jquery.min.js"></script>
-<script src="/static/dist/main.js"></script>
+<script src="/static/dist/main.js?v=20170303"></script>
 </body>
 </html>
