--- a/static/style/sass/style.scss
+++ b/static/style/sass/style.scss
@@ -26,7 +26,7 @@ body{
 		padding: 1.5em 1.5% 0 11.5%;
 	};
 	@include mediaQuery($max, '640px'){
-		padding: 5em 0.5em 0 0.5em;
+		padding: 4.4em 0.3em 0 0.3em;
 		font-size: .85em;
 	};
 }
@@ -184,6 +184,7 @@ nav{
 		width: 100%;
 		height: auto;
 		text-align: center;
+		transition: opacity 0.8s ease;
 		.logo{
 			display: none;
 		}
@@ -196,7 +197,13 @@ nav{
 				span{
 					display: none !important;
 				}
+				&:nth-child(4) {
+					display: none;
+				}
 			}
+		}
+		&.nav-out {
+			opacity: 0;
 		}
 	}
 }
@@ -356,7 +363,7 @@ nav{
 	}
 	i{
 		&:before{
-			font-size: 72px;
+			font-size: 54px;
 		}
 	}
 	.icon-circle-arrow-up:before { 
