--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 	<p>Copyright © 2010–2016 {{ site.title }} All rights reserved. Design by <a href="http://www.zhanxin.info" target="_blank">zhanxin</a>.</p>
 </footer>
 
-<script src="http://cdn.bootcss.com/jquery/1.8.3/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/1.8.3/jquery.min.js"></script>
 <script src="/static/dist/main.js?v=20170303"></script>
 </body>
 </html>
