--- a/themes/maupassant/layout/post.jade
+++ b/themes/maupassant/layout/post.jade
@@ -4,7 +4,7 @@ block title
   title= page.title + ' | ' + config.title
 
 block content
-  .post
+  .post.typo
     h1.post-title= page.title
     .post-meta= page.date.format('ll')
       if page.categories.length > 0
